<resources>
    <string name="app_name">BudgetApp</string>
    <string name="total_balance">Общий баланс</string>
    <string name="_12000_00">12000.00₽</string>
    <string name="_8500">8500₽</string>
    <string name="income_text">Доходы</string>
    <string name="_3200">3200₽</string>
    <string name="expense_text">Расходы</string>
    <string name="transactions_text">Транзакции</string>
    <string name="food_products">Продукты</string>
    <string name="label_title">Транзакция</string>
    <string name="amount">Сумма</string>
    <string name="description">Детали</string>
</resources>